# MethylTrain

./: .gitignore  CITATION.cff  README.md  environment.yaml  project_data_info.md  pyproject.toml  requirements.txt
config/: CPTAC-3_config.yaml  TCGA-BLCA_config.yaml  TCGA-BRCA_config.yaml  TCGA-CESC_config.yaml  TCGA-CHOL_config.yaml  TCGA-CHOL_config_local.yaml  TCGA-COAD_config.yaml  TCGA-ESCA_config.yaml  TCGA-GBM_config.yaml  TCGA-HNSC_config.yaml  TCGA-KIRC_config.yaml  TCGA-KIRP_config.yaml  TCGA-LGG_config.yaml  TCGA-LIHC  TCGA-LIHC_config.yaml  TCGA-LUAD  TCGA-LUAD_config.yaml  TCGA-LUSC_config.yaml  TCGA-OV_config.yaml  TCGA-PAAD_config.yaml  TCGA-PRAD_config.yaml  TCGA-SKCM_config.yaml  TCGA-THCA_config.yaml  TCGA-UCEC_config.yaml  TCGA-UVM_config.yaml  local_config.yaml  local_config_hpc.yaml  pancancer_config.yaml  pancancer_new_config.yaml  pancancer_old_config.yaml
docs/: devnotes.md
examples/: example.ipynb  example.py
logs/: download_project_838445.out  download_project_839509.out  download_project_839511.out
notebooks/: batch_correction_pca.ipynb  cptac-3.ipynb  debugging.ipynb  evaluate_cohort.ipynb  fetch_batch_id.ipynb  fix_metadata.ipynb  prepare_cohort.ipynb  testing.ipynb
resources/: illumina27k_annotation_hg19.parquet  illumina27k_annotation_hg38.parquet
resources/raw/: convert_csv_to_parquet.py  parse_annotations.R
scripts/: generate_embeddings.py  prepare_cohort.py  prepare_project.py
slurm/: download_project.py  download_project.sbatch  fix_project.py  fix_project.sbatch  prepare_cohort.sh  prepare_project.sh
(+15 files in other folders)
