[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methyltrain"
version = "0.1.0"
description = "DNA methylation data engineering for machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Sophia Li", email = "sophiamjia.li@mail.utoronto.ca" },
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sophiamjiali/methyltrain"
Issues = "https://github.com/sophiamjiali/methyltrain/issues"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["methyltrain"]

[tool.setuptools.packages.find]
where = ["src"]
